--- a/WpfToyDataForms.csproj
+++ b/WpfToyDataForms.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="AutoFilterDataGrid" Version="1.0.21221.1631" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.6" />
+    <PackageReference Include="WpfAutoGrid" Version="1.4.0" />
   </ItemGroup>
 
 </Project>
